--- a/_config.yml
+++ b/_config.yml
@@ -11,26 +11,26 @@ gems: [jekyll-paginate]
 permalink:           pretty
 
 # Setup
-title:               Naringu
+title:               Stardust's Blog
 tagline:             'A Hacker like jekyll theme'
-description:         'oonlab is crafted with <3 by ariestiyansyah.'
-url:                 http://naringu.oonlab.com
+description:         '计算机科学|程序设计|创业者'
+url:                 https://gitlab.com/finalxcode
 baseurl:             /
 paginate:            7
 
 # About/contact
 author:
-  name:              Rizky Ariestiyansyah
-  url:               https://twitter.com/ariestiyansyah
-  email:             ariestiyansyah.rizky@gmail.com
+  name:              Stardust
+  url:               https://gitlab.com/finalxcode
+  email:             finalxcode@gmail.com
 
 # Custom vars
 version:             2.0
 
 # Social Media
-github:				http://github.com/ariestiyansyah
-twitter:			http://twitter.com/ariestiyansyah
-disqus:             testnaringu
+github:				https://gitlab.com/finalxcode
+twitter:			https://gitlab.com/finalxcode
+disqus:             finalxcode
 
 # Theme Author (Please don't edit this line cause of MIT LICENSE rules)
 theme:
